--- a/config-server/src/main/resources/configurations/application.yml
+++ b/config-server/src/main/resources/configurations/application.yml
@@ -9,3 +9,10 @@ spring:
   cloud:
     config:
       override-system-properties: false
+
+
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
