--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: "http://localhost:8089/realms/micro-service"
   application:
     name: gateway-service
 
   config:
     import: optional:configserver:http://localhost:8888
+
